--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -12,6 +12,8 @@
     <form action="/loginProc" method="post" name="loginForm">
         <input id="username" type="text" name="username" placeholder="id" />
         <input id="password" type="password" name="password" placeholder="password" />
+        <!--    csrf 토큰을 백엔드로부터 받아 csrf 인증을 통과 할 수 있다.    -->
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
         <input type="submit" value="login" />
     </form>
 </body>
